--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-
 <!DOCTYPE html> 
-<html lang="pt-BR">
-<link rel="stlesheet" href="style.css"
-<head>
-    <meta charset="UTF8">
-    <title>Desdobrando o Mundo da inteligência artificial e Aprendizado de Máquina para Leigos.</title>
- </head>
- <body> 
+<html>
+   <head>
+      <meta charset="UTF8"/>
 
+    <title>Desdobrando o Mundo da inteligência artificial e Aprendizado de Máquina para Leigos.</title>
+   </head>
+
+   <body> 
     <h1>Desdobrando o Mundo da inteligência artificial e Aprendizado de Máquina para Leigos.</h1>
 
- <p>Para que serve a inteligência artificial, ela atua na reprodução de padrões de comportamento semelhantes ao humano por dispositivos e programas computacionais. Essas tarefas podem incluir raciocínio, aprendizado, resolução de problemas, percepção, compreensão da linguagem natural e interação com o ambiente. E a definição de leigos é ‘‘significa um indivíduo com pouco ou nenhum conhecimento em determinada matéria’’.</p>
+   <p>Para que serve a inteligência artificial, ela atua na reprodução de padrões de comportamento semelhantes ao humano por dispositivos e programas computacionais. Essas tarefas podem incluir raciocínio, aprendizado, resolução de problemas, percepção, compreensão da linguagem natural e interação com o ambiente. E a definição de leigos é ‘‘significa um indivíduo com pouco ou nenhum conhecimento em determinada matéria’’.</p>
 
-<p>O <b>aprendizado de máquina</b> (em inglês, machine learning) é um método de análise de dados que automatiza a construção de modelos analíticos. É um ramo da inteligência artificial baseado na ideia de que sistemas podem aprender com dados, identificar padrões e tomar decisões com o mínimo de intervenção humana. Assim, se concentra no desenvolvimento de algoritmos e modelos que permitem que os computadores aprendam e tomem decisões com base em dados. Em vez de serem explicitamente programados para executar uma tarefa específica, os sistemas de aprendizado de máquina usam dados para aprender com exemplos e melhorar seu desempenho ao longo do tempo.</p>
-</body> 
+   <p>O <b>aprendizado de máquina</b> (em inglês, machine learning) é um método de análise de dados que automatiza a construção de modelos analíticos. É um ramo da inteligência artificial baseado na ideia de que sistemas podem aprender com dados, identificar padrões e tomar decisões com o mínimo de intervenção humana. Assim, se concentra no desenvolvimento de algoritmos e modelos que permitem que os computadores aprendam e tomem decisões com base em dados. Em vez de serem explicitamente programados para executar uma tarefa específica, os sistemas de aprendizado de máquina usam dados para aprender com exemplos e melhorar seu desempenho ao longo do tempo.</p>
+   </body> 
 </html>
