--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> 
 <html>
    <head>
+         <link rel="stylesheet" href="style.css" />
       <meta charset="UTF8"/>
-
     <title>Desdobrando o Mundo da inteligência artificial e Aprendizado de Máquina para Leigos.</title>
    </head>
 
