--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
 
    <body> 
-    <h1>Desdobrando o Mundo da inteligência artificial e Aprendizado de Máquina para Leigos.</h1>
+    <h1 class="destaque"> Desdobrando o Mundo da inteligência artificial e Aprendizado de Máquina para Leigos.</h1>
 
    <p id="paragrf01">Para que serve a inteligência artificial, ela atua na reprodução de padrões de comportamento semelhantes ao humano por dispositivos e programas computacionais. Essas tarefas podem incluir raciocínio, aprendizado, resolução de problemas, percepção, compreensão da linguagem natural e interação com o ambiente. E a definição de leigos é ‘‘significa um indivíduo com pouco ou nenhum conhecimento em determinada matéria’’.</p>
 
