--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Desdobrando o Mundo da inteligência artificial e Aprendizado de Máquina para Leigos.</title>
    </head>
 
+<img src="imgapresentação.png" alt=" foto do mundo I.A" />
+
    <body> 
     <h1 class="destaque"> Desdobrando o Mundo da inteligência artificial e Aprendizado de Máquina para Leigos.</h1>
 
