--- a/index.html
+++ b/index.html
@@ -15,4 +15,7 @@
 
    <p id="paragrf02">O <b>aprendizado de máquina</b> (em inglês, machine learning) é um método de análise de dados que automatiza a construção de modelos analíticos. É um ramo da inteligência artificial baseado na ideia de que sistemas podem aprender com dados, identificar padrões e tomar decisões com o mínimo de intervenção humana. Assim, se concentra no desenvolvimento de algoritmos e modelos que permitem que os computadores aprendam e tomem decisões com base em dados. Em vez de serem explicitamente programados para executar uma tarefa específica, os sistemas de aprendizado de máquina usam dados para aprender com exemplos e melhorar seu desempenho ao longo do tempo.</p>
    </body> 
+
+   <img scr="programação"
+
 </html>
