--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
    <p id="paragrf02">O <b>aprendizado de máquina</b> (em inglês, machine learning) é um método de análise de dados que automatiza a construção de modelos analíticos. É um ramo da inteligência artificial baseado na ideia de que sistemas podem aprender com dados, identificar padrões e tomar decisões com o mínimo de intervenção humana. Assim, se concentra no desenvolvimento de algoritmos e modelos que permitem que os computadores aprendam e tomem decisões com base em dados. Em vez de serem explicitamente programados para executar uma tarefa específica, os sistemas de aprendizado de máquina usam dados para aprender com exemplos e melhorar seu desempenho ao longo do tempo.</p>
    
    <img id="baixo" src="programaçãoimag2.png" alt=" códigos variados de linguagem de programação " />
-</body> 
 
+<h2> Lista ordenada e não ordenada</h2>
+<h3> A importancia de enter o mundo da inteligência artificial  </h3>
+<ol>
+   <li> Maquinas </li>
+   <li> O mundo digital </li>
+   <li> Raciocínio lógico </li>
+</ol>
+   <h3> Os perigos do Mundo da inteligência artificial </h3>
+<ul>
+    <li> Exposição de dados indivudais</li>
+    <li> Crimes cibernéticos </li>
+    <li> Informações falsas </li>
+</ul>
+</body> 
 </html>
