--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
    <img id="baixo" src="programaçãoimag2.png" alt=" códigos variados de linguagem de programação " />
 
 <h2> Lista ordenada e não ordenada</h2>
-<h3> A importancia de enter o mundo da inteligência artificial  </h3>
+<h3> A importancia de enter o mundo da inteligência artificial:  </h3>
 <ol>
-   <li> Maquinas </li>
-   <li> O mundo digital </li>
-   <li> Raciocínio lógico </li>
+   <li> Maquinas. </li>
+   <li> O mundo digital. </li>
+   <li> Raciocínio lógico. </li>
 </ol>
-   <h3> Os perigos do Mundo da inteligência artificial </h3>
+   <h3> Os perigos do Mundo da inteligência artificial: </h3>
 <ul>
-    <li> Exposição de dados indivudais</li>
-    <li> Crimes cibernéticos </li>
-    <li> Informações falsas </li>
+    <li> Exposição de dados indivudais.</li>
+    <li> Crimes cibernéticos. </li>
+    <li> Informações falsas. </li>
 </ul>
 </body> 
 </html>
