--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
    </head>
 
    <body> 
+   <a href="#texto">Introdução</a>
+   <a href="listas">Lista ordenada e não ordenada</a>
+   <section id="texto">
     <h1 class="destaque"> Desdobrando o Mundo da inteligência artificial e Aprendizado de Máquina para Leigos.</h1>
 
 <img id="topo" src="imgapresentação.png" alt=" cerebro em 2d lado sagital em formas linhas padrão de placa " />
@@ -16,7 +19,8 @@
    <p id="paragrf02">O <b>aprendizado de máquina</b> (em inglês, machine learning) é um método de análise de dados que automatiza a construção de modelos analíticos. É um ramo da inteligência artificial baseado na ideia de que sistemas podem aprender com dados, identificar padrões e tomar decisões com o mínimo de intervenção humana. Assim, se concentra no desenvolvimento de algoritmos e modelos que permitem que os computadores aprendam e tomem decisões com base em dados. Em vez de serem explicitamente programados para executar uma tarefa específica, os sistemas de aprendizado de máquina usam dados para aprender com exemplos e melhorar seu desempenho ao longo do tempo.</p>
    
    <img id="baixo" src="programaçãoimag2.png" alt=" códigos variados de linguagem de programação " />
-
+</section>
+<section id="listas">
 <h2> Lista ordenada e não ordenada</h2>
 <h3> A importancia de enter o mundo da inteligência artificial:  </h3>
 <ol>
@@ -30,5 +34,6 @@
     <li> Crimes cibernéticos. </li>
     <li> Informações falsas. </li>
 </ul>
+</section>
 </body> 
 </html>
