--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
    <body> 
    <a href="#texto">Introdução</a>
-   <a href="listas">Lista ordenada e não ordenada</a>
+   <a href="#listas">Lista ordenada e não ordenada</a>
    <section id="texto">
     <h1 class="destaque"> Desdobrando o Mundo da inteligência artificial e Aprendizado de Máquina para Leigos.</h1>
 
