--- a/index.html
+++ b/index.html
@@ -22,18 +22,22 @@
 </section>
 <section id="listas">
 <h2> Lista ordenada e não ordenada</h2>
-<h3> A importancia de enter o mundo da inteligência artificial:  </h3>
-<ol>
-   <li> Maquinas. </li>
-   <li> O mundo digital. </li>
-   <li> Raciocínio lógico. </li>
-</ol>
-   <h3> Os perigos do Mundo da inteligência artificial: </h3>
-<ul>
-    <li> Exposição de dados indivudais.</li>
-    <li> Crimes cibernéticos. </li>
-    <li> Informações falsas. </li>
-</ul>
+<div id="lista_ordenada">
+   <h3> A importancia de enter o mundo da inteligência artificial:  </h3>
+      <ol>
+         <li> Maquinas. </li>
+         <li> O mundo digital. </li>
+         <li> Raciocínio lógico. </li>
+      </ol>
+</div>
+<div id="lista_nao_ordenada">
+      <h3> Os perigos do Mundo da inteligência artificial: </h3>
+         <ul>
+            <li> Exposição de dados indivudais.</li>
+            <li> Crimes cibernéticos. </li>
+            <li> Informações falsas. </li>
+         </ul>
+</div>
 </section>
 </body> 
 </html>
