--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
    </head>
 
    <body> 
-   <a href="#texto">Introdução</a>
-   <a href="#listas">Lista ordenada e não ordenada</a>
+      <header>
+         <div id="logo"></div>
+         <div id="menu">
+            <a href="#texto">Introdução</a>
+            <a href="#listas">Lista ordenada e não ordenada</a>
+         </div>
+      </header>
+   
    <section id="texto">
     <h1 class="destaque"> Desdobrando o Mundo da inteligência artificial e Aprendizado de Máquina para Leigos.</h1>
 
