--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <section id="listas">
 <h2> Lista ordenada e não ordenada</h2>
 <div id="lista_ordenada">
-   <h3> A importancia de enter o mundo da inteligência artificial:  </h3>
+   <h3> A importancia de entender o mundo da inteligência artificial:  </h3>
       <ol>
          <li> Maquinas. </li>
          <li> O mundo digital. </li>
